<resources>
    <string name="app_name">Friend Compass</string>
    <string name="azimuth_placeholder">Azimuth: %1$d</string>
    <string name="bearing_placeholder">Bearing To: %1$d</string>
    <string name="default_name">John Doe</string>
    <string name="accuracy">Accuracy</string>
    <string name="friends">Friends</string>
    <string name="view_map">View Map</string>
    <string name="details">Details</string>
    <string name="maps_uri">geo:%1$f,%2$f?q=%1$f,%2$f(%3$s)</string>
    <string name="last_updated_placeholder">Updated %1$s</string>
    <string name="getting_your_location">Getting your location…</string>
    <string name="no_location_found">No location found.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account_sign_up">No account? Sign up</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_email">Send Email</string>
    <string name="password_reset_text">We just need the email you signed up with to send you your password reset instructions.</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
</resources>
